mgr/dashboard: Add missing blanks to fix layout issue of various texts.
This behaviour starts to occur after switching to Angular 6.

--- a/src/pybind/mgr/dashboard/frontend/src/openattic-theme.scss
+++ b/src/pybind/mgr/dashboard/frontend/src/openattic-theme.scss
@@ -299,6 +299,10 @@ ul.task-queue-pagination {
   border-top: 4px solid $oa-color-blue;
   font-size: 1.2em;
 }
+.navbar-openattic i.fa {
+  /** Add space between icon and text */
+  margin-right: 5px;
+}
 .navbar-openattic .navbar-header {
   display: flex;
   float: none;
@@ -349,6 +353,9 @@ ul.task-queue-pagination {
 .navbar-openattic .navbar-nav>li>.oa-navbar>[dropdown]>a:hover,
 .navbar-openattic .navbar-nav>li>.oa-navbar>[dropdown].open>a {
   background-color: #505050;
+}
+.navbar-openattic .navbar-nav>li a.dropdown-toggle span.caret {
+  margin-left: 5px;
 }
 .navbar-openattic .navbar-nav>.open>a,
 .navbar-openattic .navbar-nav>.open>a:hover,
@@ -538,6 +545,9 @@ ul.task-queue-pagination {
 .panel .panel-toolbar>.dropdown>a {
   padding-left: 5px;
 }
+.panel .panel-footer > .button-group button.btn {
+  margin-left: 3px;
+}
 .panel-dashboard {
   height: 100%;
   padding-top: 60px;
@@ -583,31 +593,6 @@ ul.task-queue-pagination {
 }
 .panel-dashboard .alert.bottom-margin-zero {
   margin-bottom: 0;
-}
-.panel-openattic {
-  border: $border-color;
-  border-top: 0;
-  border-radius: 0;
-}
-.panel-openattic>.panel-heading {
-  border-top: 2px solid $oa-color-blue;
-  border-radius: 0;
-  padding: 20px 15px;
-}
-.panel-openattic>.panel-heading>.panel-title {
-  color: #333333;
-  font-size: 1.333em;
-  margin: 0;
-  padding: 0;
-}
-.panel-openattic>.panel-body {
-  background: #ffffff;
-  border-top: $border-color;
-  padding: 10px 15px;
-}
-.panel-openattic>.panel-footer {
-  background: #ffffff;
-  border-top: $border-color;
 }
 
 /* Typo */
@@ -1144,6 +1129,11 @@ hr.oa-hr-small {
   font-size: 6px;
   padding-left: 4px;
   vertical-align: text-top;
+}
+
+/* Modal dialog */
+.modal-footer button.btn {
+  margin-left: 3px;
 }
 
 // awesome-bootstrap-checkbox + ForkAwesome
